<resources>
    <string name="app_name" translatable="false">QuickSell</string>

    <string name="button_label_quick_sell" translatable="false">Quick Sell</string>
    <string name="button_exit_label">Exit</string>
    <string name="content_description_token_logo">Token Logo</string>
    <string name="content_description_language_selection">language Selection</string>
    <string name="contact">Contact us</string>
    <string name="email_subject">Feedback</string>
    <string name="shared_preference_key" translatable="false">com.token.quicksell.PREFERENCE_FILE_KEY</string>
    <string name="saved_language_key" translatable="false">LANGUAGE</string>
    <string name="text_view_header">Products</string>
    <string name="language_selector_label">Select Language</string>
    <string name="english" translatable="false">English</string>
    <string name="romanian" translatable="false">Română</string>
    <string name="label_fragment_home" translatable="false">Home</string>
    <string name="button_pay">Pay</string>
    <string name="payment_label">Pay with:</string>
    <string name="button_cancel">Cancel</string>
    <string name="image_button_cash_content_description">Cash payment option</string>
    <string name="image_button_card_content_description">Card payment option</string>
    <string name="button_ok">OK</string>
    <string name="label_fragment_success">Payment Status</string>
    <string name="image_success_content_description">Success Check mark</string>
    <string name="label_fragment_payment">Payment</string>
    <string name="label_fragment_quicksell" translatable="false">Quick Sell</string>
    <string name="spinner_flag_content_description">Country flag of the Language</string>
    <string name="selected_product_content_description">Product</string>
    <string name="text_amount_number" translatable="false">0</string>
    <string name="text_amount_label">Amount:</string>
    <string name="text_button_one" translatable="false">1</string>
    <string name="text_button_two" translatable="false">2</string>
    <string name="text_button_three" translatable="false">3</string>
    <string name="text_button_clear" translatable="false">C</string>
    <string name="text_button_four" translatable="false">4</string>
    <string name="text_button_five" translatable="false">5</string>
    <string name="text_button_six" translatable="false">6</string>
    <string name="text_button_delete" translatable="false">DEL</string>
    <string name="text_button_seven" translatable="false">7</string>
    <string name="text_button_eight" translatable="false">8</string>
    <string name="text_button_nine" translatable="false">9</string>
    <string name="text_button_ok" translatable="false">OK</string>
    <string name="text_button_zero" translatable="false">0</string>
    <string name="text_button_triple_zero" translatable="false">000</string>
    <string name="text_button_double_zero" translatable="false">00</string>
    <string name="error_msg_choose_product">Please select a product!</string>
    <string name="error_msg_amount_product">The amount has to be bigger than zero!</string>
    <string name="total_price">Total price:</string>
    <string name="total_price_amount" translatable="false"> %1$.2f %2$s </string>

</resources>