<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/included_keyboard_layout"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    tools:showIn="@layout/fragment_quick_sell">


    <Button
        android:id="@+id/button_1"
        style="@style/button_number_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_one"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="69dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button_2"
        style="@style/button_number_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_two"
        app:layout_constraintBottom_toBottomOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toTopOf="@+id/button_1"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="69dp"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button_3"
        style="@style/button_number_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_three"
        app:layout_constraintBottom_toBottomOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_c"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toTopOf="@+id/button_2"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="68dp"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button_c"
        style="@style/button_keyboard_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_clear"
        app:layout_constraintBottom_toBottomOf="@+id/button_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toTopOf="@+id/button_3"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="137dp"
        tools:layout_editor_absoluteX="292dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button_4"
        style="@style/button_number_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_four"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_1"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="69dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="48dp" />

    <Button
        android:id="@+id/button_5"
        style="@style/button_number_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_five"
        app:layout_constraintBottom_toBottomOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_1"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="69dp"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="48dp" />

    <Button
        android:id="@+id/button_6"
        style="@style/button_number_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_six"
        app:layout_constraintBottom_toBottomOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_del"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_2"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="68dp"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="48dp" />

    <Button
        android:id="@+id/button_del"
        style="@style/button_keyboard_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_delete"
        app:layout_constraintBottom_toBottomOf="@+id/button_6"
        app:layout_constraintEnd_toEndOf="@+id/button_c"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_3"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="137dp"
        tools:layout_editor_absoluteX="292dp"
        tools:layout_editor_absoluteY="48dp" />

    <Button
        android:id="@+id/button_7"
        style="@style/button_number_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_seven"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_4"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="69dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="96dp" />

    <Button
        android:id="@+id/button_8"
        style="@style/button_number_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_eight"
        app:layout_constraintBottom_toBottomOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_4"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="69dp"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="96dp" />

    <Button
        android:id="@+id/button_9"
        style="@style/button_number_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_nine"
        app:layout_constraintBottom_toBottomOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_keyboard_ok"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_5"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="68dp"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="96dp" />

    <Button
        android:id="@+id/button_keyboard_ok"
        style="@style/button_keyboard_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_ok"
        app:layout_constraintBottom_toBottomOf="@+id/button_9"
        app:layout_constraintEnd_toEndOf="@+id/button_del"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_6"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="137dp"
        tools:layout_editor_absoluteX="292dp"
        tools:layout_editor_absoluteY="96dp" />

    <Button
        android:id="@+id/button_0"
        style="@style/button_number_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_00"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_7"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="58dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="144dp" />

    <Button
        android:id="@+id/button_00"
        style="@style/button_number_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_double_zero"
        app:layout_constraintEnd_toStartOf="@+id/button_000"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toTopOf="@+id/button_0"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="115dp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="144dp" />

    <Button
        android:id="@+id/button_000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/text_button_triple_zero"
        app:layout_constraintEnd_toEndOf="@+id/button_keyboard_ok"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_00"
        app:layout_constraintTop_toTopOf="@+id/button_00"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="173dp"
        tools:layout_editor_absoluteX="256dp"
        tools:layout_editor_absoluteY="144dp" />
</androidx.constraintlayout.widget.ConstraintLayout>