<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.HomeFragment">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="54dp"
            android:layout_marginBottom="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/token"
            app:layout_constraintBottom_toTopOf="@+id/button_quick_sell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description_token_logo" />

        <Button
            android:id="@+id/button_quick_sell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="@string/button_label_quick_sell"
            app:layout_constraintBottom_toTopOf="@+id/spinner_language"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <Spinner
            android:id="@+id/spinner_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="56dp"
            android:dropDownWidth="match_parent"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:contentDescription="@string/content_description_language_selection"
            app:layout_constraintBottom_toTopOf="@+id/button_exit"
            app:layout_constraintEnd_toEndOf="@+id/button_quick_sell"
            app:layout_constraintStart_toStartOf="@+id/button_quick_sell"
            app:layout_constraintTop_toBottomOf="@+id/button_quick_sell" />

        <Button
            android:id="@+id/button_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/button_exit_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>